# glmp

./: .gitignore  CMakeLists.txt  README.md
docs/: config
glmp/: CMakeLists.txt  library.h
glmp/include/: concurrentqueue.hpp  dynamic_pipeline.h  library.h  mpmc_pipeline.h  mpmc_queue.hpp  pipeline.h  platform.hpp  ringqueue.hpp  threadpool.hpp
glmp/src/: library.cc  pipeline.cc
test/: CMakeLists.txt  test.cc
